--- a/convert/templates/convert/base.html
+++ b/convert/templates/convert/base.html
@@ -27,12 +27,11 @@
             </div>
         </div>
         <div class="pen-footer">
-            <a href="https://www.behance.net/gallery/30478397/Login-Form-UI-Library" target="_blank">
+            <a href="https://github.com/nidalmer" target="_blank">
                 Nidal Meryem Dardar
             </a>
-            <a href="https://github.com/andyhqtran/UI-Library/tree/master/Login%20Form" target="_blank">
-                View on Github
-                <i class="material-icons">arrow_forward</i>
+            <a href="https://github.com/xde013" target="_blank">
+                Bourhil Ryan
             </a>
         </div>
     </body>
